force-app/main/default/objects/Core_Error_Log__c/Core_Error_Log__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <label>Fehlerlog</label>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fehlerlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>