force-app/main/default/objects/Core_Error_Log__c/fields/Core_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Core_Apex_Class__c</fullName>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <inlineHelpText>Name of the Apex Class causing the error</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>