force-app/main/default/objects/Core_Error_Log__c/fields/Core_Checksum__c.field-meta.xml
<CustomField>
    <fullName>Core_Checksum__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-1168</description>
    <externalId>true</externalId>
    <inlineHelpText>Generated from fields of error log to prevent duplicates</inlineHelpText>
    <label>Checksum</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>