force-app/main/default/objects/Core_Error_Log__c/fields/Core_Code_Line__c.field-meta.xml
<CustomField>
    <fullName>Core_Code_Line__c</fullName>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <inlineHelpText>Line Number of Apex Class</inlineHelpText>
    <label>Code Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>