force-app/main/default/objects/Core_Error_Log__c/fields/Core_Count__c.field-meta.xml
<CustomField>
    <fullName>Core_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-1168</description>
    <inlineHelpText>Number of occurrences of error log</inlineHelpText>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>