force-app/main/default/objects/Core_Error_Log__c/fields/Core_External_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Core_External_System_Id__c</fullName>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <inlineHelpText>Record ID of the external system</inlineHelpText>
    <label>External System Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>