force-app/main/default/objects/Core_Error_Log__c/fields/Core_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Core_Integration_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <inlineHelpText>Indicates whether the error is based on integration activities</inlineHelpText>
    <label>Integration Error</label>
    <type>Checkbox</type>
</CustomField>