force-app/main/default/objects/Core_Error_Log__c/fields/Core_Process_User__c.field-meta.xml
<CustomField>
    <fullName>Core_Process_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <inlineHelpText>User who has started the process</inlineHelpText>
    <label>Process User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>