force-app/main/default/objects/Core_Error_Log__c/fields/Core_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>Core_Salesforce_Id__c</fullName>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <label>Salesforce Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>