force-app/main/default/objects/Core_Error_Log__c/fields/Core_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Core_Source_System__c</fullName>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_System</valueSetName>
    </valueSet>
</CustomField>