force-app/main/default/objects/Core_Error_Log__c/fields/Core_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Core_Stack_Trace__c</fullName>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <inlineHelpText>Relevant for errors based on apex code</inlineHelpText>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>