force-app/main/default/objects/Core_Error_Log__c/fields/Core_Technical_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Core_Technical_Error_Message__c</fullName>
    <description>1. Integration relevant (GRACE)
2. Core
3. SF-782</description>
    <label>Technical Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>