force-app/main/default/objects/Core_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Core_Count__c</columns>
    <columns>Core_Salesforce_Id__c</columns>
    <columns>Core_External_System_Id__c</columns>
    <columns>Core_Object__c</columns>
    <columns>Core_Process_User__c</columns>
    <columns>Core_Error_Message__c</columns>
    <columns>Core_Technical_Error_Message__c</columns>
    <columns>Core_Source_System__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Fehlerlogs</label>
</ListView>